Fixed on safari and added basic mobile support

--- a/src/components/answers/answers.scss
+++ b/src/components/answers/answers.scss
@@ -6,7 +6,11 @@
 	}
 
 	.answer {
-		flex-basis: 50%;
+		flex-basis: 100%;
 		padding: 5px;
+
+		@media (min-width: 500px) {
+			flex-basis: 50%;
+		}
 	}
 }
